Projeto: RentalX - Docker, Banco de Dados e Injeção de Dependência
