# rentalx/src/modules/cars/useCases/createCategory/CreateCategoryController.ts
@@ -1,16 +1,18 @@
 import { Request, Response } from 'express';
+import { container } from 'tsyringe';
 
 import { CreateCategoryUseCase } from './CreateCategoryUseCase';
 
 class CreateCategoryController {
-  constructor(private createCategoryUseCase: CreateCategoryUseCase) {}
-
-  handle(request: Request, response: Response): Response {
-    const { name, description } = request.body;
-
-    this.createCategoryUseCase.execute({ name, description });
-
-    return response.status(201).send();
+  async handle(request: Request, response: Response): Promise<Response> {
+    try {
+      const { name, description } = request.body;
+      const createCategoryUseCase = container.resolve(CreateCategoryUseCase);
+      await createCategoryUseCase.execute({ name, description });
+      return response.status(201).send();
+    } catch {
+      return response.status(500).json({ error: 'Category already exists.' });
+    }
   }
 }
 
