# rentalx/src/modules/cars/useCases/createSpecification/CreateSpecificationController.ts
@@ -1,16 +1,25 @@
 import { Request, Response } from 'express';
+import { container } from 'tsyringe';
 
 import { CreateSpecificationUseCase } from './CreateSpecificationUseCase';
 
 class CreateSpecificationController {
-  constructor(private createSpecificationUseCase: CreateSpecificationUseCase) {}
+  async handle(request: Request, response: Response): Promise<Response> {
+    try {
+      const { name, description } = request.body;
 
-  handle(request: Request, response: Response): Response {
-    const { name, description } = request.body;
+      const createSpecificationUseCase = container.resolve(
+        CreateSpecificationUseCase,
+      );
 
-    this.createSpecificationUseCase.execute({ name, description });
+      await createSpecificationUseCase.execute({ name, description });
 
-    return response.status(201).send();
+      return response.status(201).send();
+    } catch {
+      return response
+        .status(500)
+        .json({ error: 'Specification already exists.' });
+    }
   }
 }
 
